<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_dimem"
            app:srcCompat="@drawable/logo" android:id="@+id/imageView2"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textSize="@dimen/title_size"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/imageView2" android:layout_marginEnd="@dimen/margin_right"
            app:layout_constraintEnd_toEndOf="@+id/imageView2" android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/default_margin_login" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:gravity="center"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUser"
            android:hint="@string/label_username"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle" android:layout_marginTop="@dimen/default_margin_login"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/label_password"
            android:layout_marginTop="@dimen/default_margin_login"
            app:layout_constraintTop_toBottomOf="@+id/etUser"
            app:layout_constraintStart_toStartOf="@+id/etUser" app:layout_constraintEnd_toEndOf="@+id/etUser"/>
    <Button
            android:text="@string/label_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btLogin"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/etPassword" app:layout_constraintEnd_toEndOf="@+id/etPassword"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_top" app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:layout_marginBottom="@dimen/margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/btSignin"/>
    <Button
            android:text="@string/label_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSignin" app:layout_constraintEnd_toEndOf="@+id/btLogin"
            app:layout_constraintStart_toStartOf="@+id/btLogin" android:layout_marginBottom="@dimen/default_margin_login"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <CheckBox
            android:text="@string/label_stay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbStayid"
            app:layout_constraintEnd_toEndOf="@+id/btLogin"
            app:layout_constraintStart_toStartOf="@+id/btLogin" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btLogin" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btSignin"/>


</android.support.constraint.ConstraintLayout>
